# libne-tests

./: CMakeLists.txt
src/: NE10_sample_matrix_multiply.c  NE10_samples.c
